--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     .container{max-width:1100px;margin:0 auto;padding:24px}
 
     /* Navbar / Tabs */
-    .tabs{display:flex;gap:12px}
+    .tabs{display:flex;gap:12px;flex-wrap:wrap}
     .tab{padding:10px 14px;border-radius:12px;background:transparent;border:1px solid transparent;cursor:pointer;font-weight:600}
     .tab.active{background:var(--accent);color:#fff;border-color:rgba(0,0,0,0.05);box-shadow:0 6px 18px rgba(183,107,163,0.12)}
 
@@ -48,6 +48,10 @@
     textarea{min-height:120px}
     .btn-send{background:var(--accent);color:#fff;padding:10px;border-radius:10px;border:0;font-weight:700}
 
+    /* Avis clients */
+    .review{background:#fef5fb;padding:12px;border-radius:10px;margin-bottom:12px}
+    .stars{color:#f5b700;margin-bottom:6px}
+
     footer{border-top:1px solid #eee;padding:18px 0;color:var(--muted)}
 
     @media (max-width:800px){
@@ -71,176 +75,12 @@
       <nav class="tabs" role="tablist" aria-label="Navigation principale">
         <button class="tab active" data-tab="accueil" role="tab" aria-selected="true">Accueil</button>
         <button class="tab" data-tab="produits" role="tab" aria-selected="false">Produits</button>
+        <button class="tab" data-tab="apropos" role="tab" aria-selected="false">À propos</button>
+        <button class="tab" data-tab="blog" role="tab" aria-selected="false">Blog</button>
+        <button class="tab" data-tab="avis" role="tab" aria-selected="false">Avis clients</button>
         <button class="tab" data-tab="contact" role="tab" aria-selected="false">Contact</button>
       </nav>
     </div>
   </header>
 
-  <main class="container">
-    <!-- Accueil -->
-    <section id="accueil" class="tab-panel">
-      <div class="hero">
-        <div class="left">
-          <h1>Bienvenue chez Éclat Beauté</h1>
-          <p>Nous créons des cosmétiques riches en ingrédients naturels, testés dermatologiquement, pour révéler l'éclat naturel de votre peau.</p>
-          <a href="#produits" class="cta">Découvrir nos produits</a>
-        </div>
-        <div class="right" style="flex:1;min-width:260px">
-          <div style="background:linear-gradient(180deg,#fff,#fff);padding:16px;border-radius:12px;border:1px solid #f0eaf3">
-            <strong>Notre promesse</strong>
-            <p style="margin:8px 0 0;color:var(--muted)">Formules propres, tests cliniques, emballages recyclables.</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Video section -->
-      <div style="margin-top:8px">
-        <h2>Vidéo de présentation</h2>
-        <p style="color:var(--muted)">Découvrez notre histoire et comment nous fabriquons nos produits.</p>
-        <div class="video-wrap" style="margin-top:12px">
-          <!-- Remplacez l'URL par votre vidéo YouTube ou Vimeo -->
-          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Vidéo Éclat Beauté" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-      </div>
-    </section>
-
-    <!-- Produits -->
-    <section id="produits" class="tab-panel" hidden>
-      <h2>Nos produits phares</h2>
-      <p style="color:var(--muted)">Des soins formulés pour chaque type de peau — six produits sélectionnés.</p>
-
-      <div class="grid cols-3" style="margin-top:18px">
-        <!-- Product 1 -->
-        <article class="card">
-          <img src="https://images.unsplash.com/photo-1514996937319-344454492b37?q=80&w=800&auto=format&fit=crop&crop=faces" alt="Sérum Éclat">
-          <div class="product-info">
-            <div class="product-title">Sérum Éclat</div>
-            <div class="price">29,90 €</div>
-            <p style="margin:6px 0;color:var(--muted)">Sérum hydratant concentré en vitamine C pour un teint lumineux.</p>
-            <a class="btn-buy" href="https://buy.example.com/produit1" target="_blank" rel="noopener">Acheter — Paiement</a>
-          </div>
-        </article>
-
-        <!-- Product 2 -->
-        <article class="card">
-          <img src="https://images.unsplash.com/photo-1542831371-d531d36971e6?q=80&w=800&auto=format&fit=crop&crop=faces" alt="Crème de jour">
-          <div class="product-info">
-            <div class="product-title">Crème de Jour Réparatrice</div>
-            <div class="price">24,50 €</div>
-            <p style="margin:6px 0;color:var(--muted)">Hydratation longue durée, protection anti-pollution.</p>
-            <a class="btn-buy" href="https://buy.example.com/produit2" target="_blank" rel="noopener">Acheter — Paiement</a>
-          </div>
-        </article>
-
-        <!-- Product 3 -->
-        <article class="card">
-          <img src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?q=80&w=800&auto=format&fit=crop&crop=faces" alt="Masque Nuit">
-          <div class="product-info">
-            <div class="product-title">Masque Nuit Régénérant</div>
-            <div class="price">34,00 €</div>
-            <p style="margin:6px 0;color:var(--muted)">Soin intensif pour la régénération nocturne de la peau.</p>
-            <a class="btn-buy" href="https://buy.example.com/produit3" target="_blank" rel="noopener">Acheter — Paiement</a>
-          </div>
-        </article>
-
-        <!-- Product 4 -->
-        <article class="card">
-          <img src="https://images.unsplash.com/photo-1523381214185-7d68b4a7e8d4?q=80&w=800&auto=format&fit=crop&crop=faces" alt="Huile visage">
-          <div class="product-info">
-            <div class="product-title">Huile Visage Nourrissante</div>
-            <div class="price">27,00 €</div>
-            <p style="margin:6px 0;color:var(--muted)">Riche en acides gras essentiels pour les peaux sèches.</p>
-            <a class="btn-buy" href="https://buy.example.com/produit4" target="_blank" rel="noopener">Acheter — Paiement</a>
-          </div>
-        </article>
-
-        <!-- Product 5 -->
-        <article class="card">
-          <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?q=80&w=800&auto=format&fit=crop&crop=faces" alt="Brume visage">
-          <div class="product-info">
-            <div class="product-title">Brume Hydratante</div>
-            <div class="price">15,90 €</div>
-            <p style="margin:6px 0;color:var(--muted)">Brume légère pour rafraîchir et hydrater tout au long de la journée.</p>
-            <a class="btn-buy" href="https://buy.example.com/produit5" target="_blank" rel="noopener">Acheter — Paiement</a>
-          </div>
-        </article>
-
-        <!-- Product 6 -->
-        <article class="card">
-          <img src="https://images.unsplash.com/photo-1503602642458-232111445657?q=80&w=800&auto=format&fit=crop&crop=faces" alt="Crème nuit">
-          <div class="product-info">
-            <div class="product-title">Crème Nuit Confort</div>
-            <div class="price">31,50 €</div>
-            <p style="margin:6px 0;color:var(--muted)">Texture riche, réparation et souplesse au réveil.</p>
-            <a class="btn-buy" href="https://buy.example.com/produit6" target="_blank" rel="noopener">Acheter — Paiement</a>
-          </div>
-        </article>
-      </div>
-
-      <p style="margin-top:12px;color:var(--muted)"><small>Remplacez les liens de paiement par vos liens réels (Stripe, PayPal, WooCommerce, etc.).</small></p>
-    </section>
-
-    <!-- Contact -->
-    <section id="contact" class="tab-panel" hidden>
-      <h2>Contactez-nous</h2>
-      <p style="color:var(--muted)">Une question ? Un partenariat ? Envoyez-nous un message.</p>
-
-      <!-- Contact form: pour un site statique, utilisez Formspree ou Netlify Forms. -->
-      <form action="https://formspree.io/f/your-form-id" method="POST">
-        <label>
-          <input type="text" name="name" placeholder="Votre nom" required>
-        </label>
-        <label>
-          <input type="email" name="email" placeholder="Votre e-mail" required>
-        </label>
-        <label>
-          <textarea name="message" placeholder="Votre message" required></textarea>
-        </label>
-        <button type="submit" class="btn-send">Envoyer le message</button>
-      </form>
-
-      <div style="margin-top:18px">
-        <h3>Infos</h3>
-        <p style="color:var(--muted)"><strong>Email :</strong> <a href="mailto:contact@eclat-beaute.example">contact@eclat-beaute.example</a><br>
-        <strong>Téléphone :</strong> +33 1 23 45 67 89</p>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <div class="container" style="display:flex;justify-content:space-between;align-items:center">
-      <div>
-        © <strong>Éclat Beauté</strong> — Tous droits réservés
-      </div>
-      <div style="color:var(--muted)">Suivez-nous sur les réseaux</div>
-    </div>
-  </footer>
-
-  <script>
-    // Simple tab behaviour
-    const tabs = document.querySelectorAll('.tab');
-    const panels = document.querySelectorAll('.tab-panel');
-    tabs.forEach(tab=>{
-      tab.addEventListener('click', ()=>{
-        // set active
-        tabs.forEach(t=>{t.classList.remove('active');t.setAttribute('aria-selected','false')});
-        tab.classList.add('active');tab.setAttribute('aria-selected','true');
-        // show panel
-        const id = tab.dataset.tab;
-        panels.forEach(p=>{
-          if(p.id===id){p.hidden=false}else{p.hidden=true}
-        })
-        // small focus for accessibility
-        document.getElementById(id).focus?.();
-      })
-    })
-
-    // Optional: deep link to open a tab via hash (ex: #produits)
-    const hash = location.hash.replace('#','');
-    if(hash){
-      const tab = Array.from(tabs).find(t=>t.dataset.tab===hash);
-      if(tab) tab.click();
-    }
-  </script>
-</body>
-</html>
+  <main class="co
