--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Éclat Beauté — Cosmétiques</title>
-  <meta name="description" content="Éclat Beauté — cosmétiques naturels et soins premium">
+  <title>Bélli et Bien étre — Cosmétiques</title>
+  <meta name="description" content="Bélli et Bien étre— cosmétiques naturels et soins premium">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -81,7 +81,7 @@
       <div style="display:flex;gap:14px;align-items:center">
         <img src="assets/images/logo.png" alt="Logo Éclat Beauté" style="border-radius:12px;width:60px">
         <div>
-          <strong style="font-size:1.2rem">Éclat Beauté</strong><br>
+          <strong style="font-size:1.2rem">Bélli et Bien étre</strong><br>
           <small>Cosmétiques naturels & soins premium</small>
         </div>
       </div>
@@ -98,7 +98,7 @@
     <section id="accueil" class="tab-panel">
       <div class="hero">
         <div class="left">
-          <h1>Bienvenue chez Éclat Beauté</h1>
+          <h1>Bienvenue chez Bélli et Bien étre</h1>
           <p>Nous créons des cosmétiques riches en ingrédients naturels, testés dermatologiquement, pour révéler l'éclat naturel de votre peau.</p>
           <a href="#produits" class="cta" onclick="document.querySelector('[data-tab=\'produits\']').click()">Découvrir nos produits</a>
         </div>
@@ -112,7 +112,7 @@
       <div style="margin-top:36px">
         <h2>Vidéo de présentation</h2>
         <div class="video-wrap">
-          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Vidéo Éclat Beauté" allowfullscreen loading="lazy"></iframe>
+          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Vidéo Bélli et Bien étre" allowfullscreen loading="lazy"></iframe>
         </div>
       </div>
       <div class="reviews">
@@ -155,7 +155,7 @@
 
   <footer>
     <div class="container">
-      <div>© <strong>Éclat Beauté</strong> — Tous droits réservés</div>
+      <div>© <strong>Bélli et Bien étre</strong> — Tous droits réservés</div>
       <div class="social-links">
         Suivez-nous:
         <a href="#" target="_blank">Facebook</a>
