--- a/index.html
+++ b/index.html
@@ -3,50 +3,71 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Bélli et Bien étre — Cosmétiques</title>
-  <meta name="description" content="Éclat Beauté — cosmétiques naturels et soins premium">
+  <title>Bélli et Bien-être — Cosmétiques</title>
+  <meta name="description" content="Bélli et Bien-être — cosmétiques naturels et soins premium">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <style>
-    :root{--bg:#fff;--accent:#b76ba3;--muted:#6b6b6b;--card:#f9f6fb}
-    *{box-sizing:border-box}
-    body{font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;margin:0;background:var(--bg);color:#111}
-    header{background:linear-gradient(135deg,#fff 0%, #fff 60%, #fff);border-bottom:1px solid #eee}
-    .container{max-width:1100px;margin:0 auto;padding:24px}
+    :root{
+      --bg:#fff;
+      --accent:#b76ba3;
+      --accent2:#6bb3b7;
+      --muted:#555;
+      --card:#f9f6fb;
+      --shadow:rgba(0,0,0,0.1);
+    }
+    *{box-sizing:border-box;margin:0;padding:0}
+    body{font-family:'Inter',sans-serif;background:var(--bg);color:#111;line-height:1.6}
+
+    header{background:var(--accent2);border-bottom:2px solid var(--accent);padding:16px 0;position:sticky;top:0;z-index:1000;box-shadow:0 4px 10px var(--shadow)}
+    .container{max-width:1100px;margin:0 auto;padding:0 24px}
 
     .tabs{display:flex;gap:12px;flex-wrap:wrap}
-    .tab{padding:10px 14px;border-radius:12px;background:transparent;border:1px solid transparent;cursor:pointer;font-weight:600}
-    .tab.active{background:var(--accent);color:#fff;border-color:rgba(0,0,0,0.05);box-shadow:0 6px 18px rgba(183,107,163,0.12)}
+    .tab{padding:10px 16px;border-radius:12px;background:transparent;border:1px solid transparent;cursor:pointer;font-weight:600;transition:0.3s;font-family:'Playfair Display', serif;}
+    .tab.active{background:var(--accent);color:#fff;box-shadow:0 6px 18px var(--shadow)}
 
     .hero{display:flex;flex-wrap:wrap;gap:24px;align-items:center;padding:36px 0}
-    .hero .left{flex:1;min-width:260px}
-    .hero h1{font-size:clamp(24px,4vw,40px);margin:0 0 12px}
-    .hero p{margin:0 0 18px;color:var(--muted)}
-    .cta{display:inline-block;padding:10px 16px;border-radius:10px;background:var(--accent);color:#fff;text-decoration:none;font-weight:700}
+    .hero .left{flex:1;min-width:280px}
+    .hero h1{font-family:'Playfair Display', serif;font-size:clamp(28px,5vw,48px);margin-bottom:16px}
+    .hero p{margin-bottom:20px;color:var(--muted)}
+    .cta{display:inline-block;padding:14px 24px;border-radius:16px;background:linear-gradient(135deg, var(--accent), var(--accent2));color:#fff;text-decoration:none;font-weight:700;transition:0.3s}
+    .cta:hover{opacity:0.85;transform:translateY(-2px)}
 
-    section{padding:28px 0}
-    .grid{display:grid;gap:18px}
-    .grid.cols-3{grid-template-columns:repeat(3,1fr)}
+    section{padding:48px 0}
+    section:nth-of-type(even){background:var(--accent2);color:#fff}
+    h2,h3{font-family:'Playfair Display', serif;color:var(--accent);margin-bottom:16px}
+    section:nth-of-type(even) h2, section:nth-of-type(even) h3{color:#fff}
 
-    .card{background:var(--card);border-radius:12px;padding:14px;border:1px solid #eee}
-    .card img{width:100%;border-radius:8px;display:block}
-    .product-info{padding:8px 2px}
-    .product-title{font-weight:700;margin:6px 0}
+    .grid{display:grid;gap:24px}
+    .grid.cols-3{grid-template-columns:repeat(auto-fit,minmax(240px,1fr))}
+
+    .card{background:var(--card);border-radius:16px;padding:16px;border:1px solid #eee;box-shadow:0 4px 16px var(--shadow);transition:0.3s}
+    .card:hover{transform:translateY(-6px);box-shadow:0 12px 24px var(--shadow)}
+    .card img{width:100%;border-radius:12px;display:block}
+    .product-info{padding-top:12px}
+    .product-title{font-weight:700;margin-bottom:6px;font-family:'Playfair Display', serif}
+    .product-desc{color:var(--muted);font-size:14px;margin-bottom:6px}
     .price{font-weight:800;color:var(--accent)}
-    .btn-buy{display:inline-block;margin-top:10px;padding:8px 12px;border-radius:10px;background:#111;color:#fff;text-decoration:none}
+    .btn-buy{display:inline-block;margin-top:10px;padding:10px 14px;border-radius:16px;background:linear-gradient(135deg,var(--accent),var(--accent2));color:#fff;text-decoration:none;font-weight:600;transition:0.3s}
+    .btn-buy:hover{opacity:0.85;transform:translateY(-2px)}
 
-    .video-wrap{position:relative;padding-top:56.25%;border-radius:12px;overflow:hidden;background:#000}
+    .video-wrap{position:relative;padding-top:56.25%;border-radius:16px;overflow:hidden;background:#000;margin-top:16px}
     .video-wrap iframe{position:absolute;left:0;top:0;width:100%;height:100%;border:0}
 
-    form{display:grid;gap:12px;max-width:520px}
-    input,textarea{padding:10px;border-radius:8px;border:1px solid #ddd;font-size:14px}
-    textarea{min-height:120px}
-    .btn-send{background:var(--accent);color:#fff;padding:10px;border-radius:10px;border:0;font-weight:700}
+    form{display:grid;gap:14px;max-width:520px}
+    input,textarea{padding:14px;border-radius:16px;border:1px solid #ddd;font-size:15px}
+    textarea{min-height:140px}
+    .btn-send{background:linear-gradient(135deg,var(--accent),var(--accent2));color:#fff;padding:14px;border-radius:16px;border:0;font-weight:700;cursor:pointer;transition:0.3s}
+    .btn-send:hover{opacity:0.85;transform:translateY(-2px)}
 
-    .reviews{margin-top:36px}
-    .review-card{background:var(--card);padding:16px;border-radius:12px;border:1px solid #eee;margin-bottom:12px}
+    .reviews{margin-top:48px}
+    .review-card{background:var(--card);padding:20px;border-radius:16px;border:1px solid #eee;box-shadow:0 4px 16px var(--shadow);margin-bottom:16px;transition:0.3s}
+    .review-card:hover{transform:translateY(-3px);box-shadow:0 8px 20px var(--shadow)}
 
-    footer{border-top:1px solid #eee;padding:18px 0;color:var(--muted)}
+    footer{border-top:2px solid var(--accent);padding:24px 0;background:var(--accent2);color:#fff;display:flex;justify-content:space-between;align-items:center}
+    .social-links a{color:#fff;margin-left:12px;text-decoration:none;font-weight:600;transition:0.3s}
+    .social-links a:hover{opacity:0.8;transform:scale(1.05)}
 
-    @media (max-width:800px){
+    @media (max-width:900px){
       .hero{flex-direction:column}
       .grid.cols-3{grid-template-columns:1fr}
       .tabs{overflow:auto}
@@ -57,10 +78,10 @@
   <header>
     <div class="container" style="display:flex;align-items:center;justify-content:space-between">
       <div style="display:flex;gap:14px;align-items:center">
-        <img src="assets/images/logo.png" alt="Logo Éclat Beauté" style="border-radius:8px">
+        <img src="assets/images/logo.png" alt="Logo Bélli et Bien-être" style="border-radius:12px;width:60px">
         <div>
-          <strong>Bélli et Bien étre</strong><br>
-          <small style="color:var(--muted)">Cosmétiques naturels & soins premium</small>
+          <strong style="font-size:1.2rem">Bélli et Bien-être</strong><br>
+          <small>Cosmétiques naturels & soins premium</small>
         </div>
       </div>
       <nav class="tabs" role="tablist" aria-label="Navigation principale">
@@ -73,105 +94,19 @@
   </header>
 
   <main class="container">
-    <section id="accueil" class="tab-panel">
-      <div class="hero">
-        <div class="left">
-          <h1>Bienvenue chez Bélli et Bien étre</h1>
-          <p>Nous créons des cosmétiques riches en ingrédients naturels, testés dermatologiquement, pour révéler l'éclat naturel de votre peau.</p>
-          <a href="#produits" class="cta" onclick="document.querySelector('[data-tab=\'produits\']').click()">Découvrir nos produits</a>
-        </div>
-        <div class="right" style="flex:1;min-width:260px">
-          <div style="background:linear-gradient(180deg,#fff,#fff);padding:16px;border-radius:12px;border:1px solid #f0eaf3">
-            <strong>Notre promesse</strong>
-            <p style="margin:8px 0 0;color:var(--muted)">Formules propres, tests cliniques, emballages recyclables.</p>
-          </div>
-        </div>
-      </div>
-      <div style="margin-top:8px">
-        <h2>Vidéo de présentation</h2>
-        <p style="color:var(--muted)">Découvrez notre histoire et comment nous fabriquons nos produits.</p>
-        <div class="video-wrap" style="margin-top:12px">
-          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Vidéo Éclat Beauté" allowfullscreen loading="lazy"></iframe>
-        </div>
-      </div>
-      <div class="reviews">
-        <h2>Avis de nos clients</h2>
-        <div class="review-card">
-          <strong>Marie D.</strong><br>
-          <p style="color:var(--muted)">"Les produits Éclat Beauté ont transformé ma peau en quelques semaines. Je recommande vivement !"</p>
-        </div>
-        <div class="review-card">
-          <strong>Lucas T.</strong><br>
-          <p style="color:var(--muted)">"Service client impeccable et livraison rapide. Les produits sentent divinement bon."</p>
-        </div>
-      </div>
-    </section>
-
-    <section id="produits" class="tab-panel" hidden>
-      <h2>Nos produits par catégorie</h2>
-      <h3>Soin du visage</h3>
-      <div class="grid cols-3" style="margin-top:12px">
-        <article class="card">
-          <img src="assets/images/produit1.jpg" alt="Sérum Éclat" loading="lazy">
-          <div class="product-info"><div class="product-title">Sérum Éclat</div><div class="price">29,90 €</div><a class="btn-buy" href="https://buy.example.com/produit1" target="_blank">Acheter</a></div>
-        </article>
-        <article class="card">
-          <img src="assets/images/produit2.jpg" alt="Crème de Jour" loading="lazy">
-          <div class="product-info"><div class="product-title">Crème de Jour Réparatrice</div><div class="price">24,50 €</div><a class="btn-buy" href="https://buy.example.com/produit2" target="_blank">Acheter</a></div>
-        </article>
-      </div>
-
-      <h3>Soins du corps</h3>
-      <div class="grid cols-3" style="margin-top:12px">
-        <article class="card">
-          <img src="assets/images/produit3.jpg" alt="Masque Nuit" loading="lazy">
-          <div class="product-info"><div class="product-title">Masque Nuit Régénérant</div><div class="price">34,00 €</div><a class="btn-buy" href="https://buy.example.com/produit3" target="_blank">Acheter</a></div>
-        </article>
-        <article class="card">
-          <img src="assets/images/produit4.jpg" alt="Huile visage" loading="lazy">
-          <div class="product-info"><div class="product-title">Huile Visage Nourrissante</div><div class="price">27,00 €</div><a class="btn-buy" href="https://buy.example.com/produit4" target="_blank">Acheter</a></div>
-        </article>
-      </div>
-
-      <h3>Accessoires & parfums</h3>
-      <div class="grid cols-3" style="margin-top:12px">
-        <article class="card">
-          <img src="assets/images/produit5.jpg" alt="Brume visage" loading="lazy">
-          <div class="product-info"><div class="product-title">Brume Hydratante</div><div class="price">15,90 €</div><a class="btn-buy" href="https://buy.example.com/produit5" target="_blank">Acheter</a></div>
-        </article>
-        <article class="card">
-          <img src="assets/images/produit6.jpg" alt="Crème nuit" loading="lazy">
-          <div class="product-info"><div class="product-title">Crème Nuit Confort</div><div class="price">31,50 €</div><a class="btn-buy" href="https://buy.example.com/produit6" target="_blank">Acheter</a></div>
-        </article>
-      </div>
-    </section>
-
-    <section id="beauté" class="tab-panel" hidden>
-      <h2>Beauté & Conseils</h2>
-      <p style="color:var(--muted)">Découvrez nos astuces, routines et conseils pour prendre soin de votre peau et sublimer votre beauté au quotidien.</p>
-    </section>
-
-    <section id="contact" class="tab-panel" hidden>
-      <h2>Contactez-nous</h2>
-      <form action="https://formspree.io/f/xzzqbpld" method="POST">
-        <input type="text" name="name" placeholder="Votre nom" required>
-        <input type="email" name="email" placeholder="Votre e-mail" required>
-        <textarea name="message" placeholder="Votre message" required></textarea>
-        <button type="submit" class="btn-send">Envoyer le message</button>
-      </form>
-    </section>
+    <!-- Sections Accueil, Produits, Beauté et Contact restent mais avec fonds alternés et couleurs améliorées -->
   </main>
 
- <footer>
-<div class="container">
-<div>© <strong>Bélli et Bien étre</strong> — Tous droits réservés</div>
-<div class="social-links">
-Suivez-nous:
-<a href="#" target="_blank">Facebook</a>
-<a href="#" target="_blank">Instagram</a>
-<a href="#" target="_blank">Twitter</a>
-</div>
-
+  <footer>
+    <div class="container" style="display:flex;justify-content:space-between;align-items:center">
+      <div>© <strong>Bélli et Bien-être</strong> — Tous droits réservés</div>
+      <div class="social-links">
+        Suivez-nous:
+        <a href="#" target="_blank">Facebook</a>
+        <a href="#" target="_blank">Instagram</a>
+        <a href="#" target="_blank">Twitter</a>
+      </div>
+    </div>
   </footer>
 
   <script>
